# bee-io

./: .clang-format  .gitignore  CMakeLists.txt  test.cpp
include/: crc_32.h  utils.h
include/compression/: deflate.h
include/file_formats/png/: chunk.h  idat_chunk.h  iend_chunk.h  ihdr_chunk.h  png.h
include/image/: image.h
src/: crc_32.cpp  utils.cpp
src/file_formats/png/: chunk.cpp  idat_chunk.cpp  iend_chunk.cpp  ihdr_chunk.cpp  png.cpp
src/image/: image.cpp
